# trt-llm-langchain

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: 01-research.md  02-plan.md  03-backend-contract.md  getting-started.md
docs/decisions/: 0001-backend-integration-strategy.md  0002-model-swap-strategy.md
docs/tool-call-research/: README.md  sources.md
examples/: basic_chat.py  lcel_chain.py  streaming.py  structured_output.py  swap_models.py  tool_calling.py
sprints/: README.md  sprint-01-manager.md  sprint-02-chat-trtllm.md  sprint-03-swap-lcel.md  sprint-04-hardening.md  sprint-05-backend-contract.md  sprint-06-resident-default.md  sprint-07-packaging.md  sprint-08-getting-started.md  sprint-09-polish.md  sprint-10-tool-calling.md
src/trt_llm_langchain/: __init__.py  chat.py  cli.py  config.py  errors.py  manager.py
tests/: test_chat.py  test_errors.py  test_lcel.py  test_live.py  test_manager.py  test_vram.py
