[project]
name = "trt-llm-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ken Hiatt", email = "ken.hiatt@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
trt-llm-langchain = "trt_llm_langchain:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
