[project]
name = "trt-llm-langchain"
version = "0.1.0"
description = "Use TensorRT-LLM models from LangChain (ChatTrtLlm) with model load/unload and streaming"
readme = "README.md"
authors = [
    { name = "Ken Hiatt", email = "ken.hiatt@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
markers = [
    "live: integration tests that require a running backend (opt in with TRTLLM_LIVE=1)",
]
addopts = "-m 'not live'"

[project.scripts]
trtllm-lc = "trt_llm_langchain.cli:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
